<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufba.engc50.bluelock.view.fragment.SobreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageViewLogoUfba"
        android:src="@drawable/ufba"
        android:layout_gravity="center_horizontal"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_sobre_title1"
                android:id="@+id/textViewTitulo1"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_sobre_title2"
                android:id="@+id/textViewTitulo2"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_sobre_title3"
                android:id="@+id/textViewTitulo3"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_sobre_title4"
                android:id="@+id/textViewTitulo4"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_sobre_title5"
                android:id="@+id/textViewTitulo5"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</FrameLayout>
